Add endpoints for getting signed URLs for getting and uploading map images
